add simple validation and list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 #admin.email=feedback@liverton.com
 admin.email=feedback@liverton.com
+liverton.products=MailAdviser,SmartGate,SEEMail,SmartCheck,Vistagate,iDataRoam
